[package]
name = "website"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.8"
ramhorns = "0.12.0"
diesel = { version = "1.4.4", features = ["mysql"] }
dotenv = "0.15.0"
serde = "1.0.126"